--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="widget Image" id="Image1">
                 <div class="widget-content">
                     <div class='img_story'>
-                        <img alt="@rafael2347" src='/Fotos/fotoPrincipal.png' loading="lazy" width="94" height="94">
+                        <img alt="@rafael2347" src='Fotos/fotoPrincipal.png' loading="lazy" width="94" height="94">
                     </div>
                     <div class="widget-flex">
                         <h1 class="title">Rafael González <svg style='margin-bottom:-2px' fill="none" height="16"
@@ -35,31 +35,31 @@
                         <li class="instagram">
                             <a href="https://www.instagram.com/rafael2347/" title="Instagram" aria-label="Instagram"
                                 target="_blank" rel="noopener">
-                                <img src="/Fotos/instagram.png" alt="Instagram" loading="lazy" width="40" height="40">
+                                <img src="Fotos/instagram.png" alt="Instagram" loading="lazy" width="40" height="40">
                             </a>
                         </li>
                         <li class="youtube">
                             <a href="https://www.youtube.com/@acuarioscenturion" title="YouTube" aria-label="YouTube"
                                 target="_blank" rel="noopener">
-                                <img src="/Fotos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40">
+                                <img src="Fotos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40">
                             </a>
                         </li>
                         <li class="github">
                             <a href="https://github.com/rafael2347" title="GitHub" aria-label="GitHub" target="_blank"
                                 rel="noopener">
-                                <img src="/Fotos/github.png" alt="GitHub" loading="lazy" width="40" height="40">
+                                <img src="Fotos/github.png" alt="GitHub" loading="lazy" width="40" height="40">
                             </a>
                         </li>
                         <li class="twitch">
                             <a href="https://www.twitch.tv/granadatruck" title="Twitch" aria-label="Twitch"
                                 target="_blank" rel="noopener">
-                                <img src="/Fotos/twich.png" alt="Twitch" loading="lazy" width="40" height="40">
+                                <img src="Fotos/twich.png" alt="Twitch" loading="lazy" width="40" height="40">
                             </a>
                         </li>
                         <li class="twitch">
                             <a href="https://www.linkedin.com/in/rafaellgonzalez/" title="Linkedin" aria-label="Twitch"
                                 target="_blank" rel="noopener">
-                                <img src="/Fotos/linkedin.png" alt="Linkedin" loading="lazy" width="40" height="40">
+                                <img src="Fotos/linkedin.png" alt="Linkedin" loading="lazy" width="40" height="40">
                             </a>
                         </li>
                     </ul>
