--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset='UTF-8'>
     <title>Rafa</title>
     <link rel='stylesheet' href='styles.css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rafael González - Desarrollador web y multiplataforma.">
+    <meta name="keywords" content="Rafael González, desarrollador web, multiplataforma, portfolio, proyectos, blog">
+    <meta name="author" content="Rafael González">
+    <link rel="apple-touch-icon" href="Fotos/apple-touch-icon.png">
+    <meta property="og:title" content="Rafael González - Desarrollador web y multiplataforma">
+    <meta property="og:description" content="Portfolio de Rafael González, desarrollador web y multiplataforma. Explora mis proyectos y blog.">
+   
 </head>
 
 <body>
