--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
     <link rel="apple-touch-icon" href="Fotos/apple-touch-icon.png">
     <meta property="og:title" content="Rafael González - Desarrollador web y multiplataforma">
     <meta property="og:description" content="Portfolio de Rafael González, desarrollador web y multiplataforma. Explora mis proyectos y blog.">
-   
+    <meta name="robots" content="index, follow">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8QG4JB3JG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P8QG4JB3JG');
+</script>
 
 <body>
     <div class='container'>
