--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
-<html lang='en'>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
     <title>Rafa</title>
-    <link rel='stylesheet' href='styles.css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rafael González - Desarrollador web y multiplataforma.">
     <meta name="keywords" content="Rafael González, desarrollador web, multiplataforma, portfolio, proyectos, blog">
     <meta name="author" content="Rafael González">
     <link rel="apple-touch-icon" href="Fotos/apple-touch-icon.png">
     <meta property="og:title" content="Rafael González - Desarrollador web y multiplataforma">
-    <meta property="og:description" content="Portfolio de Rafael González, desarrollador web y multiplataforma. Explora mis proyectos y blog.">
+    <meta property="og:description"
+        content="Portfolio de Rafael González, desarrollador web y multiplataforma. Explora mis proyectos y blog.">
     <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8QG4JB3JG"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-P8QG4JB3JG');
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-P8QG4JB3JG');
 </script>
 
 <body>
+    <!-- Canvas background: redes neuronales animadas -->
+    <canvas id="bgCanvas" aria-hidden="true"></canvas>
+    <div class="bg-fallback" aria-hidden="true"></div>
+
     <div class='container'>
-        <div class='bg-rafa' />
-        <div class="widget_bottom section" id="widget_bottom" name="Widget">
+        <div class="widget_bottom section" id="widget_bottom" data-name="Widget">
             <div class="widget Image" id="Image1">
                 <div class="widget-content">
                     <div class='img_story'>
-                        <img alt="@rafael2347" src='Fotos/fotoPrincipal.png' loading="lazy" width="94" height="94">
+                        <img alt="Foto de perfil de Rafael González" src='https://rafael2347.me/Fotos/fotoPrincipal.png' loading="lazy"
+                            width="94" height="94">
                     </div>
                     <div class="widget-flex">
                         <h1 class="title">Rafael González <svg style='margin-bottom:-2px' fill="none" height="16"
-                                viewBox="0 0 16 16" width="16">
+                                viewBox="0 0 16 16" width="16" aria-hidden="true">
                                 <path clip-rule="evenodd"
                                     d="M8 0L9.99182 1.3121L12.3696 1.29622L13.3431 3.48797L15.3519 4.77336L14.9979 7.14888L16 9.32743L14.431 11.1325L14.1082 13.5126L11.8223 14.1741L10.277 16L8 15.308L5.72296 16L4.17772 14.1741L1.89183 13.5126L1.569 11.1325L0 9.32743L1.00206 7.14888L0.648112 4.77336L2.65693 3.48797L3.6304 1.29622L6.00818 1.3121L8 0Z"
                                     fill="#0095F6" fill-rule="evenodd"></path>
@@ -47,74 +51,55 @@
                     </div>
                 </div>
             </div>
+
             <div class="widget LinkList">
                 <div class="widget-content">
                     <ul class="social">
-                        <li class="instagram">
-                            <a href="https://www.instagram.com/rafael2347/" title="Instagram" aria-label="Instagram"
-                                target="_blank" rel="noopener">
-                                <img src="Fotos/instagram.png" alt="Instagram" loading="lazy" width="40" height="40">
-                            </a>
+                        <li class="instagram"><a href="https://www.instagram.com/rafael2347/" title="Instagram"
+                                aria-label="Instagram" target="_blank" rel="noopener noreferrer"><img
+                                    src="https://rafael2347.me/Fotos/instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></a>
                         </li>
-                        <li class="youtube">
-                            <a href="https://www.youtube.com/@acuarioscenturion" title="YouTube" aria-label="YouTube"
-                                target="_blank" rel="noopener">
-                                <img src="Fotos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40">
-                            </a>
+                        <li class="youtube"><a href="https://www.youtube.com/@acuarioscenturion" title="YouTube"
+                                aria-label="YouTube" target="_blank" rel="noopener noreferrer"><img
+                                    src="https://rafael2347.me/Fotos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></a>
                         </li>
-                        <li class="github">
-                            <a href="https://github.com/rafael2347" title="GitHub" aria-label="GitHub" target="_blank"
-                                rel="noopener">
-                                <img src="Fotos/github.png" alt="GitHub" loading="lazy" width="40" height="40">
-                            </a>
-                        </li>
-                        <li class="twitch">
-                            <a href="https://www.twitch.tv/granadatruck" title="Twitch" aria-label="Twitch"
-                                target="_blank" rel="noopener">
-                                <img src="Fotos/twich.png" alt="Twitch" loading="lazy" width="40" height="40">
-                            </a>
-                        </li>
-                        <li class="twitch">
-                            <a href="https://www.linkedin.com/in/rafaellgonzalez/" title="Linkedin" aria-label="Twitch"
-                                target="_blank" rel="noopener">
-                                <img src="Fotos/linkedin.png" alt="Linkedin" loading="lazy" width="40" height="40">
-                            </a>
+                        <li class="github"><a href="https://github.com/rafael2347" title="GitHub" aria-label="GitHub"
+                                target="_blank" rel="noopener noreferrer"><img src="https://rafael2347.me/Fotos/github.png" alt="GitHub"
+                                    loading="lazy" width="40" height="40"></a></li>
+                        <li class="twitch"><a href="https://www.twitch.tv/granadatruck" title="Twitch"
+                                aria-label="Twitch" target="_blank" rel="noopener noreferrer"><img src="https://rafael2347.me/Fotos/twich.png"
+                                    alt="Twitch" loading="lazy" width="40" height="40"></a></li>
+                        <li class="linkedin"><a href="https://www.linkedin.com/in/rafaellgonzalez/" title="Linkedin"
+                                aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><img
+                                    src="https://rafael2347.me/Fotos/linkedin.png" alt="Linkedin" loading="lazy" width="40" height="40"></a>
                         </li>
                     </ul>
-
-
                 </div>
             </div>
+
             <div class="widget LinkList">
                 <div class="widget-content">
                     <div class="bioLink">
-                        <div class="bioLink-item">
-                            <div class="bioLink-shadow"></div>
-                            <a href="https://rfgm2023.sitew.es/" target="_blank" title="Website Official"><span
-                                    class="bioLink-text">Website Official</span></a>
-                        </div>
-                        <div class="bioLink-item">
-                            <div class="bioLink-shadow"></div>
-                            <a href="https://rfgm2023.sitew.es/Mis-proyectos" target="_blank" title="My Proyects"><span
-                                    class="bioLink-text">My Proyects</span></a>
-                        </div>
-                        <div class="bioLink-item">
-                            <div class="bioLink-shadow"></div>
-                            <a href="https://lapecera12.blogspot.com/" target="_blank" title="My Blog"><span
-                                    class="bioLink-text">My
-                                    Blog</span></a>
-                        </div>
+                        <div class="bioLink-item"><a href="https://rfgm2023.sitew.es/" target="_blank"
+                                title="Website Official"><span class="bioLink-text">Website Official</span></a></div>
+                        <div class="bioLink-item"><a href="https://rfgm2023.sitew.es/Mis-proyectos" target="_blank"
+                                title="My Proyects"><span class="bioLink-text">My Proyects</span></a></div>
+                        <div class="bioLink-item"><a href="https://lapecera12.blogspot.com/" target="_blank"
+                                title="My Blog"><span class="bioLink-text">My Blog</span></a></div>
                     </div>
                 </div>
             </div>
+
             <div class='logo-footer'>
                 Derechos reservados © 2025 <a
-                    href='https://rafael2347.neocities.org/myproyect/politicaprivacidadlinkbio' target='_blank'>Rafael
-                    González</a>
+                    href='https://rafael2347.neocities.org/myproyect/politicaprivacidadlinkbio' class= "footerPolitica"  rel="noopener noreferrer" target='_blank'>Rafael González</a>
             </div>
-        </div>
 
+        </div>
     </div>
+
+
 </body>
+<script src="myscript.js"></script>
 
 </html>
