rutas de fotos modificadas

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="widget Image" id="Image1">
                 <div class="widget-content">
                     <div class='img_story'>
-                        <img alt="Foto de perfil de Rafael González" src='https://rafael2347.me/Fotos/fotoPrincipal.png' loading="lazy"
+                        <img alt="Foto de perfil de Rafael González" src='Fotos/fotoPrincipal.png' loading="lazy"
                             width="94" height="94">
                     </div>
                     <div class="widget-flex">
@@ -57,21 +57,21 @@
                     <ul class="social">
                         <li class="instagram"><a href="https://www.instagram.com/rafael2347/" title="Instagram"
                                 aria-label="Instagram" target="_blank" rel="noopener noreferrer"><img
-                                    src="https://rafael2347.me/Fotos/instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></a>
+                                    src="Fotos/instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></a>
                         </li>
                         <li class="youtube"><a href="https://www.youtube.com/@acuarioscenturion" title="YouTube"
                                 aria-label="YouTube" target="_blank" rel="noopener noreferrer"><img
                                     src="https://rafael2347.me/Fotos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></a>
                         </li>
                         <li class="github"><a href="https://github.com/rafael2347" title="GitHub" aria-label="GitHub"
-                                target="_blank" rel="noopener noreferrer"><img src="https://rafael2347.me/Fotos/github.png" alt="GitHub"
+                                target="_blank" rel="noopener noreferrer"><img src="Fotos/github.png" alt="GitHub"
                                     loading="lazy" width="40" height="40"></a></li>
                         <li class="twitch"><a href="https://www.twitch.tv/granadatruck" title="Twitch"
-                                aria-label="Twitch" target="_blank" rel="noopener noreferrer"><img src="https://rafael2347.me/Fotos/twich.png"
+                                aria-label="Twitch" target="_blank" rel="noopener noreferrer"><img src="Fotos/twich.png"
                                     alt="Twitch" loading="lazy" width="40" height="40"></a></li>
                         <li class="linkedin"><a href="https://www.linkedin.com/in/rafaellgonzalez/" title="Linkedin"
                                 aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><img
-                                    src="https://rafael2347.me/Fotos/linkedin.png" alt="Linkedin" loading="lazy" width="40" height="40"></a>
+                                    src="Fotos/linkedin.png" alt="Linkedin" loading="lazy" width="40" height="40"></a>
                         </li>
                     </ul>
                 </div>
