--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="widget Image" id="Image1">
                 <div class="widget-content">
                     <div class='img_story'>
-                        <img alt="Foto de perfil de Rafael González" src='Fotos/fotoPrincipal.png' loading="lazy"
+                        <img alt="Foto de perfil de Rafael González" src='' loading="lazy"
                             width="94" height="94">
                     </div>
                     <div class="widget-flex">
